--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-project-",
   "version": "1.0.0",
-  "description": "",
+  "description": "projeto default de rotas e implementação CRUD utilizando Typescript",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,13 +13,23 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.3",
+    "@types/pg": "^8.6.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.18.1",
-    "http-status-code": "^2.1.0",
-    "http-status-codes": "^2.2.0"
-  }
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.7.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marcelogoodtrip/node-user-authentication.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/marcelogoodtrip/node-user-authentication/issues"
+  },
+  "homepage": "https://github.com/marcelogoodtrip/node-user-authentication#readme"
 }
