--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.3",
     "@types/pg": "^8.6.5",
     "ts-node-dev": "^2.0.0",
@@ -21,6 +22,7 @@
     "@types/express": "^4.17.13",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   },
   "repository": {
